tests/paczka1/fuzzy1/51864349.err
Error in line 6: p2a5 S723 87,86
Error in line 1: Unz61jvlCK S723 53,5
Error in line 10: p2a5 S308 66,9
Error in line 15: Unz61jvlCK S52 89,7
Error in line 4: S308 S52 29,7
Error in line 27: mNJdJBotE S924 86,7
Error in line 28: mNJdJBotE S524 342,5
